--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Chad Balash - Home</title>
-    </head>
-    <body>
+
+<head>
+    <title>Chad Balash - Home</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+
+<body>
+    
+    <header>
         <h1>Chad Balash</h1>
+    </header>
+    <nav>
+<ul>
+    <li>About</li>
+    <li>Portfolio</li>
+    <li>Contact</li>
+</ul>
+    </nav>
+    <main>
         <h2>Text</h2>
         <p>This is a sentence</p>
-    </body>
+    </main>
+    <footer>
+<p>Copyright</p>
+    </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+</body>
+
 </html>
