updating content, images, and styles

--- a/index.html
+++ b/index.html
@@ -2,30 +2,51 @@
 <html lang="en">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Chad Balash - Home</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 
 <body>
-    
     <header>
-        <h1>Chad Balash</h1>
+    <div class="headercontainer">
+        <div class="logo">Chad Balash</div>
+        <nav>
+            <ul>
+                <li class="border-right">
+                <a href="#">About</a>
+                </li>
+                <li class="border-right">
+                <a href="#">Portfolio</a>
+                </li>
+                <li>
+                <a href="#">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
     </header>
-    <nav>
-<ul>
-    <li>About</li>
-    <li>Portfolio</li>
-    <li>Contact</li>
-</ul>
-    </nav>
+
     <main>
-        <h2>Text</h2>
-        <p>This is a sentence</p>
+        <h1>About Me</h1>
+        <section>
+            <img class="profile-image" src="./assets/images/portriat-chad-shark.jpg" alt="Image of Chad Balash">
+            <p>My money's in that office, right? If she start giving me some bullshit about it ain't there, and we got to go
+                someplace else and get it, I'm gonna shoot you in the head then and there. Then I'm gonna shoot that bitch
+                in the kneecaps, find out where my goddamn money is. She gonna tell me too. Hey, look at me when I'm talking
+                to you, motherfucker. You listen: we go in there, and that nigga Winston or anybody else is in there, you
+                the first motherfucker to get shot. You understand? </p>
+
+            <p>Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular
+                gun in American crime. Do you believe that shit? It actually says that in the little book that comes with
+                it: the most popular gun in American crime. Like they're actually proud of that shit. </p>
+
+        </section>
     </main>
     <footer>
-<p>Copyright</p>
+        <p>Copyright &copy;</p>
     </footer>
-
 
 
 
