updating responsiveness, portfolio, index, contact, and css

--- a/index.html
+++ b/index.html
@@ -10,54 +10,48 @@
 
 <body>
     <header>
-    <div class="headercontainer">
-        <div class="logo">Chad Balash</div>
-        <nav>
-            <ul>
-                <li class="border-right">
-                <a href="#">About</a>
-                </li>
-                <li class="border-right">
-                <a href="#">Portfolio</a>
-                </li>
-                <li>
-                <a href="#">Contact</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
+        <div class="headercontainer">
+            <div class="logo">Chad Balash</div>
+            <nav>
+                <ul>
+                    <li class="border-right">
+                        <a href="index.html">About</a>
+                    </li>
+                    <li class="border-right">
+                        <a href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
         <h1>About Me</h1>
         <section>
             <img class="profile-image" src="./assets/images/portriat-chad-shark.jpg" alt="Image of Chad Balash">
-            <p>My money's in that office, right? If she start giving me some bullshit about it ain't there, and we got to go
-                someplace else and get it, I'm gonna shoot you in the head then and there. Then I'm gonna shoot that bitch
-                in the kneecaps, find out where my goddamn money is. She gonna tell me too. Hey, look at me when I'm talking
-                to you, motherfucker. You listen: we go in there, and that nigga Winston or anybody else is in there, you
-                the first motherfucker to get shot. You understand? </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis leo in ligula bibendum pharetra ac sit amet
+                metus. Donec imperdiet magna suscipit fringilla eleifend. Donec arcu ante, blandit non ante non, tincidunt
+                pretium justo. Aliquam turpis orci, semper non quam lobortis, varius malesuada ligula. Donec venenatis ligula
+                et orci pharetra malesuada. Quisque ac elit in velit rutrum euismod eget ac justo. Donec sit amet arcu ultrices
+                lacus ornare molestie. Fusce rhoncus volutpat justo, sed suscipit diam pharetra eu. Phasellus ex quam, tempor
+                sed est eget, ornare tincidunt ipsum. Duis non diam nec sem bibendum laoreet vel quis metus. Donec eget nisl
+                placerat, ornare leo at, elementum urna. Pellentesque sit amet tempor tortor, fermentum maximus urna. Morbi
+                vehicula tortor id nunc faucibus efficitur. Nunc pharetra vulputate augue at consequat. Cras fringilla ullamcorper
+                sapien. Sed id sapien leo.</p>
 
-            <p>Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular
-                gun in American crime. Do you believe that shit? It actually says that in the little book that comes with
-                it: the most popular gun in American crime. Like they're actually proud of that shit. </p>
+            <p>Integer in aliquet arcu. Nulla mi ligula, consequat vel lacus eget, sagittis fermentum dui. Pellentesque sollicitudin
+                metus lacus, ut volutpat lectus dapibus a. Duis dapibus diam ipsum, nec efficitur risus placerat ac. Aliquam
+                nisi massa, facilisis id massa nec, lacinia vestibulum ligula. Mauris sed eleifend lacus, non porta ante.
+                </p>
 
         </section>
     </main>
     <footer>
         <p>Copyright &copy;</p>
     </footer>
-
-
-
-
-
-
-
-
-
-
-
 
 </body>
 
